# wikipedia-minus-wikipedians

./: .gitignore  Cargo.toml  LICENSE  README.md  log.toml
scripts/: Wikipedia-Minus-Wikipedians-CodeDeploy-EC2-Permissions.json  appspec.yml  create_environment.sh  create_iam_instance_profile.sh  deploy_revision.sh  destroy_environment.sh  parse_cache_node_endpoints.py  parse_instance_names.py  parse_instance_state.py  parse_security_group_ids.py  parse_tags.py  s3_bucket_policy.json  s3_bucket_policy_template.json  start_service.sh  stop_service.sh  wikipedia-minus-wikipedians.conf  wikipedia-minus-wikipedians.conf_template
src/: json.rs  longest_common_subsequence.rs  main.rs  merge.rs  page.rs  timer.rs  wiki.rs
