[package]
name = "wikipedia_minus_wikipedians"
version = "0.1.0"
authors = ["jakeschmidt"]

[dependencies]
html5ever = "*"
html5ever_dom_sink = "*"
hyper = "*"
iron = "*"
regex = "*"
regex_macros = "*"
rustc-serialize = "0.3"
tempfile = "1.1.0"
tendril = "*"

[dependencies.url]
git = "https://github.com/servo/rust-url"
